p2/app1_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  labels:
    app: app-one
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        # image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 80
        # env:
          # - name: MESSAGE
            # value: "Hello from app1."
