p2/app1_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: app-one-service
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9376
