p2/app1_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: app1.com
    http:
      paths:
      - path: /
          pathType: Prefix  
        backend:
          service:
          name: app-one-service
          port: 
            number: 80
